-User create validation with tests

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@
 *.class
 target/*
 .idea/*
+neo4jWorkspace/.metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
+neo4jWorkspace/.metadata/
+.metadata/
+neo4j-services/.classpath
+neo4j-services/.project
+neo4j-services/test-output/
+neo4j-services/.settings/org.eclipse.wst.validation.prefs
+neo4j-services/.settings/
+akka-java-springfactory/.settings/org.eclipse.wst.common.component
+akka-java-springfactory/.settings/
+.backup/2.0.9/hdbstudio_1.2.xml
+*.project
+.settings/
+*.classpath
+akka-java-springfactory/target/
