adding book full details

--- a/neo4j-services/src/main/resources/log4j.properties
+++ b/neo4j-services/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, appLog, console
+log4j.rootLogger=DEBUG, appLog, console
 
 # Console appender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
