-return book impl

--- a/neo4j-services/src/main/resources/log4j.properties
+++ b/neo4j-services/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG,console, appLog
+log4j.rootLogger=INFO,console, appLog
 
 # Console appender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
